--- a/src/App.css
+++ b/src/App.css
@@ -78,8 +78,12 @@ nav > ul > li {
 .restaurantCard {
   display: flex;
   flex-direction: column;
-  width: 30%;
   margin: 10px;
+  width: 250px;
+}
+
+.restaurantCards a {
+  color: inherit;
 }
 
 .shimmerCard {
@@ -100,7 +104,6 @@ nav > ul > li {
 .restaurantCards {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
   width: 70%;
   margin: auto;
@@ -113,3 +116,43 @@ nav > ul > li {
   display: flex;
   justify-content: space-evenly;
 }
+
+.menu-container {
+  text-align: center;
+}
+
+.menu-container p {
+  font-size: larger;
+}
+
+.restaurant-category-container {
+  width: 50%;
+  background-color: lightgrey;
+  margin: auto;
+  padding: 20px;
+}
+
+.inner-container {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.item-list-item {
+  width: 25%;
+  padding: 16px;
+}
+
+.add-button {
+  padding: 8px;
+  margin-left: 64px;
+  margin-right: 64px;
+  border-radius: 8px;
+  background-color: rgb(0 0 0);
+  color: rgb(255 255 255);
+}
+
+.item-image {
+  width: 100%;
+}
+
