--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,10 @@ nav > ul > li {
   width: 100%;
 }
 
+.MemoBox{
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  margin: 150px;
+}
+
