--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,10 @@
 } */
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 10px;
+  /* display: flex; */
+  /* justify-content: space-between;
+  align-items: center; */
+  /* padding: 0 10px; */
   background-color: white;
   box-shadow: gray;
   margin-bottom: 20px;
@@ -161,5 +161,9 @@ nav > ul > li {
   height: 300px;
   border: 1px solid black;
   margin: 150px;
+}
+
+.cart {
+  margin: 100px;
 }
 
